[gd_scene load_steps=13 format=3 uid="uid://pgqjxv3cg5j1"]

[ext_resource type="Script" path="res://scripts/combat/Aberration.gd" id="1_u7j4s"]
[ext_resource type="Texture2D" uid="uid://dmv8bmfgfdlcq" path="res://assets/MyAssets/Mobs/aberration.png" id="2_xj47c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8eb8o"]
atlas = ExtResource("2_xj47c")
region = Rect2(286, 0, 143, 153)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vffb"]
atlas = ExtResource("2_xj47c")
region = Rect2(429, 0, 143, 153)

[sub_resource type="AtlasTexture" id="AtlasTexture_cn0l8"]
atlas = ExtResource("2_xj47c")
region = Rect2(0, 0, 143, 153)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i7wh"]
atlas = ExtResource("2_xj47c")
region = Rect2(143, 0, 143, 153)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8p1o"]
atlas = ExtResource("2_xj47c")
region = Rect2(0, 0, 143, 153)

[sub_resource type="AtlasTexture" id="AtlasTexture_udkpo"]
atlas = ExtResource("2_xj47c")
region = Rect2(143, 0, 143, 153)

[sub_resource type="SpriteFrames" id="SpriteFrames_ljpds"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eb8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vffb")
}],
"loop": false,
"name": &"death",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cn0l8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i7wh")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8p1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udkpo")
}],
"loop": true,
"name": &"move",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_sgxkw"]
radius = 47.2652

[sub_resource type="CircleShape2D" id="CircleShape2D_kn1xn"]
radius = 33.2415

[sub_resource type="CircleShape2D" id="CircleShape2D_p2tku"]
radius = 463.004

[node name="Aberration" type="CharacterBody2D"]
script = ExtResource("1_u7j4s")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ljpds")
animation = &"idle"
frame_progress = 0.0238924

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, -1)
shape = SubResource("CircleShape2D_sgxkw")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(4, -2)
shape = SubResource("CircleShape2D_kn1xn")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(1, -1)
shape = SubResource("CircleShape2D_p2tku")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
